fixed header-hero spacing on index

--- a/SASS/components/hero.scss
+++ b/SASS/components/hero.scss
@@ -3,7 +3,6 @@ section {
     background: $hero-img;
     background-size: cover;
     background-position: 50% 80%;
-    background-repeat: no-repeat;
 }
 
 
